Config tinkering + tguid salting

--- a/example.secrets.yml
+++ b/example.secrets.yml
@@ -3,3 +3,5 @@ BOT_TOKEN: 1234567890:Lorem-ipsum_dolor-sit_amet-consecte
 
 PANEL_USER: "username"
 PANEL_PASSWORD: "password"
+
+TG_UID_SALT: "salt to hide tg uids even more"
